<resources>
    <string name="app_name">SWFiches</string>
    <string name="path">/SWFiches/Specializations/en/</string>
    <string name="url_path">https://swfiches.herokuapp.com/</string>

    <!--<string name="species_json_name">json/species.json</string>
    <string name="career_json_name">json/career.json</string>-->
    <string name="skill_json_name">json/skill.json</string>
    <string name="species_json_name">json_fr/species_fr.json</string>
    <string name="career_json_name">json_fr/career_fr.json</string>

    <!-- Errors -->
    <string name="no_connection">No internet connection.</string>
    <string name="not_on_wifi_title">Not on wifi</string>
    <string name="not_on_wifi_message">You are not using wi-fi. Continue ?</string>
    <string name="no_pdf_reader_installed">There is no PDF reader installed on your phone. Please, install one.</string>


    <string name="see_specialization_tree_title">See specialization tree</string>
    <string name="select_specialisation_tree">Select specialization tree</string>

    <!-- Campaign List Fragment -->
    <string name="add_campaign">Add a new campaign</string>
    <string name="add_campaign_dialog_title">Add campaign</string>
    <string name="add_campaign_dialog_message">Name your campaign</string>
    <string name="campagne_default_title">Campaign %d</string>
    <string name="remove_campaign_dialog_title">Remove campaign</string>
    <string name="remove_campaign_dialog_message">Are you sure you want to remove this campaign ?</string>
    <string name="existing_campaign_dialog_message">This campaign already exists, please enter another name.</string>


    <!-- Character List Fragment -->
    <string name="add_character">Add a new character</string>
    <string name="add_character_dialog_title">Add character</string>
    <string name="add_character_dialog_message">Name your character</string>
    <string name="character_default_name">Character %d</string>
    <string name="remove_character_dialog_title">Remove character</string>
    <string name="remove_character_dialog_message">Are you sure you want to remove this character ?</string>

    
    <!-- PersoFrag -->
    <string name="add_career">Career</string>
    <string name="add_first_specialization">Specialization</string>
    <string name="add_specialization">Add specialization</string>
    <string name="dialog_edit_perso_title">Perso</string>
    <string name="dialog_add_career_title">@string/add_career</string>
    <string name="dialog_add_specialization_title">@string/add_first_specialization</string>
    <string name="dialog_add_new_specialization_title">@string/add_specialization</string>
    <string name="format_name">Name : %s</string>
    <string name="format_specie">Specie : %s</string>
    <string name="format_career">Career : %s</string>
    <string name="format_spezcialization">Specializations : %s</string>
    <string name="format_multiple_specialization">, %s</string>
    <string name="dialog_too_many_skill_check_message">You have selected too many skills. Please, select only %s skills.</string>
    <string name="dialog_not_enough_skill_check_message">You have not selected enough skills. Please, select %s skills.</string>
    <string name="droid">Droid</string>
    <string name="force_sensitive_emergent">Force sensitive emergent</string>
    <string name="force_sensitive_exile">Force sensitive exile</string>

    
    
    <!-- CharacteristicFrag -->
    <string name="format_brawn">Brawn : %s</string>
    <string name="format_agility">Agility : %s</string>
    <string name="format_intelligence">Intellect : %s</string>
    <string name="format_cunning">Cunning : %s</string>
    <string name="format_willpower">Willpower : %s</string>
    <string name="format_presence">Presence : %s</string>
    <string name="dialog_charac_title">Characteristics</string>
    <string name="dialog_brawn">Brawn</string>
    <string name="dialog_agility">Agility</string>
    <string name="dialog_intelligence">Intelligence</string>
    <string name="dialog_cunning">Cunning</string>
    <string name="dialog_willpower">Willpower</string>
    <string name="dialog_presence">Presence</string>


    <!-- StatsFrag -->
    <string name="format_soak">Soak\n%s</string>
    <string name="format_wound">Wound\n%1$s/%2$s</string>
    <string name="format_strain">Strain\n%1$s/%2$s</string>
    <string name="format_defense">Defense\n%1$s|%2$s</string>
    <string name="format_force_rate">Force rate\n%s</string>
    <string name="format_weight">Encumbrance\n%1$s/%2$s</string>
    <string name="format_xp">Xp\n%1$s/%2$s</string>
    <string name="format_special">Special : %s</string>
    <string name="dialog_stats_title">Statistics</string>
    <string name="dialog_stats_wound">Wound Threshold</string>
    <string name="dialog_stats_strain">Strain Threshold</string>
    <string name="dialog_stats_force_rating">Force Rate</string>
    <string name="dialog_stats_weight">Encumbrance</string>
    <string name="dialog_stats_xp">XP</string>


    <!-- SkillFrag -->
    <string name="skill_frag_hide_skills_button_text">Hide skills</string>
    <string name="skill_frag_show_skills_button_text">Show skills</string>
    <string name="skill_frag_hide_custom_skills_button_text">Hide custom skills</string>
    <string name="skill_frag_show_custom_skills_button_text">Show custom skills</string>
    <string name="skill_frag_title">Skills</string>
    <string name="skill_frag_custom_skill_title">Custom skills</string>
    <string name="add_custom_skill_button">Add custom skill</string>
    <string name="dialog_add_skill_title">Add skill</string>
    <string name="dialog_edit_skill_is_career">Career skill</string>
    <string name="dialog_edit_skill_rank">Rank</string>
    <string name="dialog_edit_skill_bonus_dice">Bonus Dice</string>
    <string name="dialog_edit_skill_malus_dice">Malus Dice</string>

    <string-array name="skill_frag_dialog_spinner_charac">
        <item>Brawn</item>
        <item>Agility</item>
        <item>Intellect</item>
        <item>Cunning</item>
        <item>Willpower</item>
        <item>Presence</item>
    </string-array>

    <string name="add_skill_dialog_name">Name</string>
    <string name="remove_skill_dialog_title">Remove skill</string>
    <string name="remove_skill_dialog_message">Are you sure you want to remove this skill ?</string>


    <!-- Tree -->
    <string name="toolbar_menu_tree_item">See trees</string>


    <!-- WeaponFrag -->
    <string name="weapon_frag_hide_weapons_button_text">Hide weapons</string>
    <string name="weapon_frag_show_weapons_button_text">Show weapons</string>

    <string name="weapon_frag_title">Weapons</string>
    <string name="weapon_frag_button">Add weapon</string>

    <string name="weapon_frag_weapon_name_format">Name : %s</string>
    <string name="weapon_frag_weapon_damage_format">Damage\n%s</string>
    <string name="weapon_frag_weapon_critic_format">Critic\n%s</string>
    <string name="weapon_frag_weapon_weight_format">Encumbrance\n%s</string>
    <string name="weapon_frag_weapon_mod_format">Mod\n%1$s/%2$s</string>
    <string name="weapon_frag_weapon_range_format">Range : %s</string>
    <string name="weapon_frag_weapon_special_format">Special : %s</string>

    <string name="weapon_frag_dialog_weapon_name">Name</string>
    <string name="weapon_frag_dialog_weapon_damage">Damage</string>
    <string name="weapon_frag_dialog_weapon_critic">Critic</string>
    <string name="weapon_frag_dialog_weapon_weight">Encumbrance</string>
    <string name="weapon_frag_dialog_weapon_mod">Mod</string>
    <string name="weapon_frag_dialog_weapon_range">Range</string>
    <string name="weapon_frag_dialog_weapon_skill">Skill</string>
    <string name="weapon_frag_dialog_weapon_special">Special</string>

    <string-array name="weapon_frag_dialog_spinner_range">
        <item>Engaged</item>
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
        <item>Extreme</item>
    </string-array>

    <string-array name="weapon_frag_dialog_spinner_skill">
        <item>Brawl</item>
        <item>Gunnery</item>
        <item>Lightsaber (Br)</item>
        <item>Lightsaber (Ag)</item>
        <item>Lightsaber (Int)</item>
        <item>Lightsaber (Cun)</item>
        <item>Lightsaber (Will)</item>
        <item>Lightsaber (Pr)</item>
        <item>Melee</item>
        <item>Ranged Heavy</item>
        <item>Ranged Light</item>
    </string-array>

    <string name="weapon_remove_dialog_title">Remove weapon</string>
    <string name="weapon_remove_dialog_content">Are you sure you want to remove this weapon ?</string>
    


    <!-- ArmorFrag -->
    <string name="armor_frag_title">Armor</string>
    <string name="armor_frag_armor_name_format">Name : %s</string>
    <string name="armor_frag_armor_soak_format">Soak\n%s</string>
    <string name="armor_frag_armor_def_format">Defense\n%1$s|%2$s</string>
    <string name="armor_frag_armor_weight_format">Encumbrance\n%s</string>
    <string name="armor_frag_armor_mod_format">Mod\n%1$s/%2$s</string>
    <string name="armor_frag_armor_special_format">Special : %s</string>
    <string name="armor_frag_dialog_armor_name">Name</string>
    <string name="armor_frag_dialog_armor_soak">Soak</string>
    <string name="armor_frag_dialog_armor_def_cac">Melee Defense</string>
    <string name="armor_frag_dialog_armor_def_range">Range Defense</string>
    <string name="armor_frag_dialog_armor_weight">Encumbrance</string>
    <string name="armor_frag_dialog_armor_mod">Mod</string>
    <string name="armor_frag_dialog_armor_special">Special</string>

</resources>
