<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_name"/>

    <EditText
        android:id="@+id/dialog_edit_armor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/armor_frag_dialog_armor_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_soak"/>

    <EditText
        android:id="@+id/dialog_edit_armor_soak"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/armor_frag_dialog_armor_soak"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_def_cac"/>

    <EditText
        android:id="@+id/dialog_edit_armor_def_cac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/armor_frag_dialog_armor_def_cac"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_def_range"/>

    <EditText
        android:id="@+id/dialog_edit_armor_def_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/armor_frag_dialog_armor_def_range"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_mod"/>

    <com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator
        android:id="@+id/dialog_edit_armor_mod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_weight"/>

    <EditText
        android:id="@+id/dialog_edit_armor_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/armor_frag_dialog_armor_weight"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_frag_dialog_armor_special"/>

    <EditText
        android:id="@+id/dialog_edit_armor_special"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/armor_frag_dialog_armor_special"/>

</LinearLayout>