<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding">


    <CheckBox
        android:id="@+id/dialog_edit_skill_is_career_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_edit_skill_is_career"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/dialog_edit_skill_bonus_layout"
        android:layout_gravity="center_vertical"/>


    <LinearLayout
        android:id="@+id/rank_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit_skill_rank"
            android:layout_gravity="center"
            android:gravity="center"/>

        <com.example.hokan.swfiches.components.HorizontalNumberPicker
            android:id="@+id/dialog_edit_skill_rank_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

        </com.example.hokan.swfiches.components.HorizontalNumberPicker>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/dialog_edit_skill_bonus_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_below="@id/rank_container"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit_skill_bonus_dice"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"/>

        <com.example.hokan.swfiches.components.HorizontalNumberPicker
            android:id="@+id/dialog_edit_skill_bonus_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

        </com.example.hokan.swfiches.components.HorizontalNumberPicker>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/rank_container"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit_skill_malus_dice"
            android:layout_gravity="center"
            android:gravity="center"/>

        <com.example.hokan.swfiches.components.HorizontalNumberPicker
            android:id="@+id/dialog_edit_skill_malus_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

        </com.example.hokan.swfiches.components.HorizontalNumberPicker>

    </LinearLayout>


</RelativeLayout>