<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dialog_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_wound"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator
                android:id="@+id/dialog_edit_stats_wound_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_strain"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>

            <com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator
                android:id="@+id/dialog_edit_stats_strain_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator>

        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_stats_force_rating"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"/>

    <com.example.hokan.swfiches.components.HorizontalNumberPicker
        android:id="@+id/dialog_edit_stats_force_modifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
    </com.example.hokan.swfiches.components.HorizontalNumberPicker>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_weight"
                android:gravity="center_horizontal"
                android:layout_gravity="center"/>

            <com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator
                android:id="@+id/dialog_edit_stats_weight_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_stats_xp"
                android:layout_gravity="center"
                android:gravity="center_horizontal"/>

            <com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator
                android:id="@+id/dialog_edit_stats_xp_modifier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">
            </com.example.hokan.swfiches.components.HorizontalDoubleEditTextWithSeparator>

        </LinearLayout>

    </LinearLayout>





</LinearLayout>